--- a/4월 4일/Cross-Site-Scripting (XSS)/2. xss-1/풀이.md
+++ b/4월 4일/Cross-Site-Scripting (XSS)/2. xss-1/풀이.md
@@ -6,7 +6,7 @@
 <img src="3.jpg">  
 1. / : index.html을 return 함
 <img src="4.jpg">  
-2. /vuln : **http://host3.dreamhack.games:24404/vuln?param=%3Cscript%3Ealert(1)%3C/script%3E** 로 들어간다.
+2. /vuln : <strong>http://host3.dreamhack.games:24404/vuln?param=%3Cscript%3Ealert(1)%3C/script%3E</strong> 로 들어간다.
 -> 이 때, **<script>**가 먹히는 것을 보고 XSS를 사용할 수 있다는 것을 알 수 있다.
 <img src="5.jpg">  
 3. /memo : **/memo?memo=메모할 문자열** 과 같이 path를 지정하면, 메모할 문자열이 memo 창에 가면 메모된다.  
