--- a/4월 4일/Cross Site Request Forgery (CSRF)/2. csrf-1/풀이.md
+++ b/4월 4일/Cross Site Request Forgery (CSRF)/2. csrf-1/풀이.md
@@ -4,7 +4,10 @@
 xss 문제와 비슷하지만 약간의 차이점이 있습니다.  
 <img src="4.jpg">  
 웹 사이트도 거의 xss 문제와 비슷합니다.  
-<img src="5.jpg"> <img src="6.jpg"> <img src="7.jpg"> <img src="8.jpg">  
+(1) <img src="5.jpg">  
+(2) <img src="6.jpg">  
+(3) <img src="7.jpg">  
+(4) <img src="8.jpg">    
 1. /vuln 페이지  
 화면으로 봤을 때, param에 있는 **<script>alert(1)</script>** 가 실행되지 않고, **<*>alert(1)** 가 표시되어 있습니다.
 코드에서 58 ~ 60번째 줄을 통해, **frame, script, on** 을 '*' 로 치환해서, xss 가 통하지 않게 막았습니다.
